# Brainf-ck

./: .replit  CMakeLists.txt  Makefile.am  Makefile.in  bf.cpp  bf.hpp  configure  configure.ac  main.cpp  makefile  readme.md  strategy.md
.github/workflows/: c-cpp.yml  cmake.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: bf.cpp  main.cpp  raii.cpp  raii.hpp
